adding id in the page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="abuyako-portfolio" content="">
     <title>Abuyako - Portfolio</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,13 +19,13 @@
         </div>
         <div class="navbar-list">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Experience</a></li>
-                <li><a href="#">Project</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#project">Project</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -32,7 +33,7 @@
     <!-- Home -->
     <div class="home">
         <div class="home-text">
-            <h1>Hello, I'm</h1>
+            <h1 id="home">Hello, I'm</h1>
             <p>Abubakary Kowero</p>
             <h3>Front-End Developer</h3>
             <ul>
@@ -55,7 +56,7 @@
 
     <!-- about -->
     <div class="about">
-        <div class="about-picture">
+        <div class="about-picture" id="about">
             <img src="/assets/images/red.svg" width="100%" alt="programmer">
         </div>
         <div class="about-text">
@@ -108,7 +109,7 @@
     </div>
 
     <!-- skills  -->
-    <div class="skill">
+    <div class="skill" id="skills">
         <div class="skill-technical">
             <h1>Technical skills</h1>
 
@@ -164,7 +165,7 @@
     </div>
 
     <!-- Experience  -->
-    <div class="experience">
+    <div class="experience" id="experience">
         <div class="experience-education">
             <h1>Education</h1>
 
@@ -223,7 +224,7 @@
         </div>
     </div>
     <!-- Project -->
-    <div class="project">
+    <div class="project" id="project">
 
         <div class="project01 mySlides">
             <div class="project01-image">
@@ -276,7 +277,7 @@
     
 
     <!-- Gallery   -->
-<div class="slideshow-container">
+<div class="slideshow-container" id="gallery">
 
 <div class="mySlide fade">
   <!-- <div class="numbertext">1 / 3</div> -->
@@ -305,12 +306,12 @@
   <span class="dotss"></span> 
 </div>
 
-<div class="contact">
+<div class="contact" id="contact">
     <div class="contant-text">
         <h1>All right reserved Abuyako &copy; 2020</h1>
     </div>
     <div class="contact-hire">
-        <a href="#">NEED A WEBSITE? PLEASE HIRE ME <i class="fa fa-paper-plane"></i></a>
+        <a href="#home">NEED A WEBSITE? PLEASE HIRE ME <i class="fa fa-paper-plane"></i></a>
     </div>
 </div>
 
