--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </div>
 
     <!-- Home -->
-    <div class="home">
+    <div class="home" id="home">
         <div class="home-text">
-            <h1 id="home">Hello, I'm</h1>
+            <h1>Hello, I'm</h1>
             <p>Abubakary Kowero</p>
             <h3>Front-End Developer</h3>
             <ul>
