adding top button

--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
     </div>
 </div>
 
+<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
     <script src="/assets/js/app.js"></script>
     <script src="/assets/js/gallery.js"></script>
