adding js for button

--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
 
     <script src="/assets/js/app.js"></script>
     <script src="/assets/js/gallery.js"></script>
+    <script src="/assets/js/top.js"></script>
 </body>
 
 </html
