modification of css

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                 <a href="https://instagram.com/itsabuyako"><i class="fa fa-instagram material-icons"></i></a>
                 <a href="https://twitter.com/abuyako"><i class="fa fa-twitter material-icons"></i></a>
                 <a href="https://github.com/abuyako"><i class="fa fa-github material-icons"></i></a>
-                <a href="https://www.linkedin.com/in/abubakary-kowero-6a8ba0104/"><i class="fa fa-linkedin material-icons"></i></a>
+                <a href="https://www.linkedin.com/in/abubakary-kowero-6a8ba0104/"><i
+                        class="fa fa-linkedin material-icons"></i></a>
             </div>
         </div>
         <div class="home-image">
@@ -274,48 +275,78 @@
         <a class="next" onclick="plusSlides(1)">❯</a>
     </div>
 
-    
+
 
     <!-- Gallery   -->
-<div class="slideshow-container" id="gallery">
+    <div class="slideshow-container" id="gallery">
 
-<div class="mySlide fade">
-  <!-- <div class="numbertext">1 / 3</div> -->
-  <img src="./assets/images/coder.jpg" style="width:80%">
-  <div class="text">Caption Text</div>
-</div>
+        <div class="mySlide fade">
+            <!-- <div class="numbertext">1 / 3</div> -->
+            <img src="./assets/images/g0.JPG" style="width:80%">
+            <div class="text">DEV FEST DAR ES SALAAM</div>
+        </div>
 
-<div class="mySlide fade">
-  <!-- <div class="numbertext">2 / 3</div> -->
-  <img src="./assets/images/coding.svg" style="width:80%">
-  <div class="text">Caption Two</div>
-</div>
+        <div class="mySlide fade">
+            <!-- <div class="numbertext">2 / 3</div> -->
+            <img src="./assets/images/g1.jpg" style="width:80%">
+            <div class="text">ALC 4.0 FINAL MEETINGS</div>
+        </div>
 
-<div class="mySlide fade">
-  <!-- <div class="numbertext">3 / 3</div> -->
-  <img src="./assets/images/keyboard.jpg" style="width:80%">
-  <div class="text">Caption Three</div>
-</div>
+        <div class="mySlide fade">
+            <!-- <div class="numbertext">3 / 3</div> -->
+            <img src="./assets/images/g2.jpg" style="width:80%">
+            <div class="text">ALC 4.0 FINAL MEETINGS</div>
+        </div>
 
-</div>
-<br>
+        <div class="mySlide fade">
+            <!-- <div class="numbertext">3 / 3</div> -->
+            <img src="./assets/images/g3.jpg" style="width:80%">
+            <div class="text">ALC 4.0 FINAL MEETINGS</div>
+        </div>
 
-<div style="text-align:center">
-  <span class="dotss"></span> 
-  <span class="dotss"></span> 
-  <span class="dotss"></span> 
-</div>
+        <div class="mySlide fade">
+            <!-- <div class="numbertext">3 / 3</div> -->
+            <img src="./assets/images/g4.jpg" style="width:80%">
+            <div class="text">Caption Three</div>
+        </div>
 
-<div class="contact" id="contact">
-    <div class="contant-text">
-        <h1>All right reserved Abuyako &copy; 2020</h1>
+        <div class="mySlide fade">
+            <!-- <div class="numbertext">3 / 3</div> -->
+            <img src="./assets/images/g5.JPG" style="width:80%">
+            <div class="text">Caption Three</div>
+        </div>
+
+        <div class="mySlide fade">
+            <!-- <div class="numbertext">3 / 3</div> -->
+            <img src="./assets/images/g6.JPG" style="width:80%">
+            <div class="text">Caption Three</div>
+        </div>
+
+        <div class="mySlide fade">
+            <!-- <div class="numbertext">3 / 3</div> -->
+            <img src="./assets/images/g7.jpg" style="width:80%">
+            <div class="text">Caption Three</div>
+        </div>
+
     </div>
-    <div class="contact-hire">
-        <a href="#home">NEED A WEBSITE? PLEASE HIRE ME <i class="fa fa-paper-plane"></i></a>
-    </div>
-</div>
+    <br>
 
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <div style="text-align:center">
+        <span class="dotss"></span>
+        <span class="dotss"></span>
+        <span class="dotss"></span>
+    </div>
+
+    <div class="contact" id="contact">
+        <div class="contant-text">
+            <h1>All right reserved Abuyako &copy; 2020</h1>
+        </div>
+        <div class="contact-hire">
+            <a href="#home">NEED A WEBSITE? PLEASE HIRE ME <i class="fa fa-paper-plane"></i></a>
+        </div>
+    </div>
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
     <script src="/assets/js/app.js"></script>
     <script src="/assets/js/gallery.js"></script>
