styling the media query for the navbar

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <li><a href="#project">Project</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                  </a>
             </ul>
         </div>
     </div>
