--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <a href="https://instagram.com/itsabuyako"><i class="fa fa-instagram material-icons"></i></a>
                 <a href="https://twitter.com/abuyako"><i class="fa fa-twitter material-icons"></i></a>
                 <a href="https://github.com/abuyako"><i class="fa fa-github material-icons"></i></a>
+                <a href="#"><i class="fa fa-whatsapp material-icons"></i></a>
                 <a href="https://www.linkedin.com/in/abubakary-kowero-6a8ba0104/"><i
                         class="fa fa-linkedin material-icons"></i></a>
             </div>
