adding the whatsapp functionality

--- a/index.html
+++ b/index.html
@@ -49,7 +49,21 @@
                 <a href="https://instagram.com/itsabuyako"><i class="fa fa-instagram material-icons"></i></a>
                 <a href="https://twitter.com/abuyako"><i class="fa fa-twitter material-icons"></i></a>
                 <a href="https://github.com/abuyako"><i class="fa fa-github material-icons"></i></a>
-                <a href="#"><i class="fa fa-whatsapp material-icons"></i></a>
+                <!-- Getbutton.io widget -->
+<script type="text/javascript">
+    (function () {
+        var options = {
+            whatsapp: "+255 752 080410", // WhatsApp number
+            call_to_action: "Message us", // Call to action
+            position: "right", // Position may be 'right' or 'left'
+        };
+        var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+        s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+    })();
+</script>
+<!-- /Getbutton.io widget -->
                 <a href="https://www.linkedin.com/in/abubakary-kowero-6a8ba0104/"><i
                         class="fa fa-linkedin material-icons"></i></a>
             </div>
