adding the education background

--- a/index.html
+++ b/index.html
@@ -188,6 +188,12 @@
         <div class="experience-education">
             <h4>Education</h4>
 
+            <div class="card card-00">
+                <h1>Secondary School</h1>
+                <h2>Mieresini Secondary School</h2>
+                <h3>Kilimanjaro - Moshi</h3>
+                <p>2008 - 2011</p>
+            </div>
             <div class="card card-01">
                 <h1>Advance Secondary School</h1>
                 <h2>Same Secondary School</h2>
