styling the education card

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="navbar-logo">
             <h1>ABUYAKO</h1>
         </div>
-        <div class="navbar-list">
+        <div class="navbar-list" id="myTopnav">
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -26,9 +26,9 @@
                 <li><a href="#project">Project</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <li><a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
-                  </a>
+                  </a></li>
             </ul>
         </div>
     </div>
