--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         </div>
     </div>
 
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-hand-o-up"></i></button>
 
     <script src="/assets/js/app.js"></script>
     <script src="/assets/js/gallery.js"></script>
