adding animate.css in the home section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Home -->
     <div class="home" id="home">
-        <div class="home-text">
+        <div class="home-text animated fadeIn">
             <h1>Hello, I'm</h1>
             <p>Abubakary Kowero</p>
             <h3>Front-End Developer</h3>
@@ -68,7 +68,7 @@
                         class="fa fa-linkedin material-icons"></i></a>
             </div>
         </div>
-        <div class="home-image">
+        <div class="home-image animated fadeIn">
             <img src="/assets/images/pic.jpg" alt="jeshi" w100%;>
         </div>
     </div>
