adding animate.css in the about section

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 
     <!-- about -->
     <div class="about">
-        <div class="about-picture" id="about">
+        <div class="about-picture animated fadeIn delay-2s" id="about">
             <img src="/assets/images/red.svg" width="100%" alt="programmer">
         </div>
-        <div class="about-text">
+        <div class="about-text animated fadeIn delay-2s">
             <h1>About Me</h1>
             <p>Hello, I'm Abuyako, Web Developer based on Dar es salaam. I have rich experience in web site design &
                 building and customization. Also I am good at</p>
