--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Home -->
     <div class="home" id="home">
-        <div class="home-text animated fadeIn">
+        <div class="home-text">
             <h1>Hello, I'm</h1>
             <p>Abubakary Kowero</p>
             <h3>Front-End Developer</h3>
@@ -68,17 +68,17 @@
                         class="fa fa-linkedin material-icons"></i></a>
             </div>
         </div>
-        <div class="home-image animated fadeIn">
+        <div class="home-image">
             <img src="/assets/images/pic.jpg" alt="jeshi" w100%;>
         </div>
     </div>
 
     <!-- about -->
     <div class="about">
-        <div class="about-picture animated fadeIn delay-2s" id="about">
+        <div class="about-picture" id="about">
             <img src="/assets/images/red.svg" width="100%" alt="programmer">
         </div>
-        <div class="about-text animated fadeIn delay-2s">
+        <div class="about-text">
             <h1>About Me</h1>
             <p>Hello, I'm Abuyako, Web Developer based on Dar es salaam. I have rich experience in web site design &
                 building and customization. Also I am good at</p>
