adding the programming quote in the footer

--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
 
     <div class="contact" id="contact">
         <div class="contant-text">
+            <h2>"The only way to go fast, Is to go well"</h2>
             <h1>All right reserved Abuyako &copy; 2020</h1>
         </div>
         <div class="contact-hire">
