adding the name

--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
     <div class="contact" id="contact">
         <div class="contant-text">
             <h2>"The only way to go fast, Is to go well"</h2>
+            <p>-Robert C. Martin</p>
             <h1>All right reserved Abuyako &copy; 2020</h1>
         </div>
         <div class="contact-hire">
