--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <!-- Home -->
     <div class="home" id="home">
+        <!-- <canvas id="demo-canvas"></canvas> -->
         <div class="home-text">
             <h1>Hello, I'm</h1>
             <p>Abubakary Kowero</p>
