adding a scrolling links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="abuyako-portfolio" content="">
     <title>Abuyako - Portfolio</title>
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -336,6 +337,10 @@
 
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-hand-o-up"></i></button>
 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="/assets/js/app.js"></script>
     <script src="/assets/js/gallery.js"></script>
     <script src="/assets/js/top.js"></script>
