adding a scrolling effects

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Home -->
     <div class="home" id="home">
         <!-- <canvas id="demo-canvas"></canvas> -->
-        <div class="home-text">
+        <div class="home-text" data-aos="zoom-in">
             <h1>Hello, I'm</h1>
             <p>Abubakary Kowero</p>
             <h3>Front-End Developer</h3>
@@ -70,17 +70,17 @@
                         class="fa fa-linkedin material-icons"></i></a>
             </div>
         </div>
-        <div class="home-image">
+        <div class="home-image" data-aos="zoom-in">
             <img src="/assets/images/pic.jpg" alt="jeshi" w100%;>
         </div>
     </div>
 
     <!-- about -->
     <div class="about">
-        <div class="about-picture" id="about">
+        <div class="about-picture" id="about" data-aos="zoom-in">
             <img src="/assets/images/red.svg" width="100%" alt="programmer">
         </div>
-        <div class="about-text">
+        <div class="about-text" data-aos="zoom-in">
             <h1>About Me</h1>
             <p>Hello, I'm Abuyako, Web Developer based on Dar es salaam. I have rich experience in web site design &
                 building and customization. Also I am good at</p>
@@ -103,8 +103,8 @@
 
     <!-- what I do  -->
     <div class="do">
-        <h1>What I Do</h1>
-        <div class="do-card">
+        <h1 data-aos="flip-left">What I Do</h1>
+        <div class="do-card" data-aos="zoom-in">
             <div class="card card-01">
                 <i class="fa fa-crop"></i>
                 <h1>UI Design</h1>
@@ -131,7 +131,7 @@
 
     <!-- skills  -->
     <div class="skill" id="skills">
-        <div class="skill-technical">
+        <div class="skill-technical" data-aos="flip-left">
             <h1>Technical skills</h1>
 
             <p>html</p>
@@ -160,7 +160,7 @@
             </div>
 
         </div>
-        <div class="skill-professional">
+        <div class="skill-professional" data-aos="flip-right">
             <h1>Professional Skills</h1>
 
             <p>Communication</p>
@@ -187,7 +187,7 @@
 
     <!-- Experience  -->
     <div class="experience" id="experience">
-        <div class="experience-education">
+        <div class="experience-education" data-aos="flip-down">
             <h4>Education</h4>
 
             <div class="card card-00">
@@ -209,7 +209,7 @@
                 <p>2014 - 2017</p>
             </div>
         </div>
-        <div class="experience-work">
+        <div class="experience-work" data-aos="flip-up">
             <h4>Experience Work</h4>
 
             <div class="card card-04">
@@ -244,7 +244,7 @@
     <!-- Project -->
     <div class="project" id="project">
 
-        <div class="project01 mySlides">
+        <div class="project01 mySlides" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
             <div class="project01-image">
                 <img src="/assets/images/proj01.png" width="40%" ; height="300px" alt="proj01">
             </div>
