--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!-- what I do  -->
     <div class="do">
         <h1 data-aos="flip-left">What I Do</h1>
-        <div class="do-card" data-aos="zoom-in">
+        <div class="do-card" data-aos="zoom-in" data-aos-duration="2000">
             <div class="card card-01">
                 <i class="fa fa-crop"></i>
                 <h1>UI Design</h1>
@@ -131,7 +131,7 @@
 
     <!-- skills  -->
     <div class="skill" id="skills">
-        <div class="skill-technical" data-aos="flip-left">
+        <div class="skill-technical" data-aos="flip-left" data-aos-duration="2000">
             <h1>Technical skills</h1>
 
             <p>html</p>
@@ -160,7 +160,7 @@
             </div>
 
         </div>
-        <div class="skill-professional" data-aos="flip-right">
+        <div class="skill-professional" data-aos="flip-right" data-aos-duration="2000">
             <h1>Professional Skills</h1>
 
             <p>Communication</p>
@@ -187,7 +187,7 @@
 
     <!-- Experience  -->
     <div class="experience" id="experience">
-        <div class="experience-education" data-aos="flip-down">
+        <div class="experience-education" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
             <h4>Education</h4>
 
             <div class="card card-00">
@@ -209,7 +209,7 @@
                 <p>2014 - 2017</p>
             </div>
         </div>
-        <div class="experience-work" data-aos="flip-up">
+        <div class="experience-work" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in" data-aos-duration="500">
             <h4>Experience Work</h4>
 
             <div class="card card-04">
@@ -295,7 +295,7 @@
 
 
     <!-- Gallery   -->
-    <div class="slideshow-container" id="gallery">
+    <div class="slideshow-container" id="gallery" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="2500">
 
         <div class="mySlide fade">
             <!-- <div class="numbertext">1 / 3</div> -->
@@ -325,12 +325,12 @@
     </div>
 
     <div class="contact" id="contact">
-        <div class="contant-text">
+        <div class="contant-text" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
             <h2>"The only way to go fast, Is to go well"</h2>
             <p>-Robert C. Martin</p>
             <h1>All right reserved Abuyako &copy; 2020</h1>
         </div>
-        <div class="contact-hire">
+        <div class="contact-hire" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
             <a href="#home">NEED A WEBSITE? PLEASE HIRE ME <i class="fa fa-paper-plane"></i></a>
         </div>
     </div>
