css modification add and removing some effects

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <!-- what I do  -->
     <div class="do">
-        <h1 data-aos="flip-left">What I Do</h1>
+        <h1 data-aos="flip-left" style="font-size: 45px;">What I Do</h1>
         <div class="do-card" data-aos="zoom-in" data-aos-duration="2000">
             <div class="card card-01">
                 <i class="fa fa-crop"></i>
