--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#project">Project</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <li><a href="javascript:void(0);" class="icons" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
                   </a></li>
             </ul>
