--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
                 <li><a href="#project">Project</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="javascript:void(0);" class="icons" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
-                  </a></li>
+                <li><a href="#" class="icons" onclick="myFunction()"><i class="fa fa-bars"></i></a></li>
             </ul>
         </div>
     </div>
@@ -346,6 +344,7 @@
     <script src="/assets/js/app.js"></script>
     <script src="/assets/js/gallery.js"></script>
     <script src="/assets/js/top.js"></script>
+    
 </body>
 
 </html
