--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <h2>DESIGN & DEVELOPMENT</h2>
                 <p>Web application that will help coders to go and start doing the simple challenges in order to
                     improve their programming skills. </p>
-                <div class="project01-link">
+                <div class="project01-link link">
                     <a href="http://self-code.herokuapp.com/">View Details</a>
                 </div>
             </div>
@@ -265,7 +265,7 @@
                 <h1>Portfolio</h1>
                 <h2>DESIGN & DEVELOPMENT</h2>
                 <p>This is my portfolio for all my details, skills, work experience and many more. </p>
-                <div class="project02-link">
+                <div class="project02-link link">
                     <a href="https://abuyako.netlify.com/">View Details</a>
                 </div>
             </div>
@@ -280,7 +280,7 @@
                 <h2>DESIGN & DEVELOPMENT</h2>
                 <p>Music room Is the simple website (music platform) to get songs updates by downloading those songs in
                     a cheap price.</p>
-                <div class="project03-link">
+                <div class="project03-link link">
                     <a href="https://music-room.netlify.com/">View Details</a>
                 </div>
             </div>
