adding more modification

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
     <!-- Experience  -->
     <div class="experience" id="experience">
-        <div class="experience-education" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
+        <div class="experience-education" data-aos="zoom-in" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
             <h4>Education</h4>
 
             <div class="card card-00">
@@ -207,7 +207,7 @@
                 <p>2014 - 2017</p>
             </div>
         </div>
-        <div class="experience-work" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in" data-aos-duration="500">
+        <div class="experience-work" data-aos="zoom-in" data-aos-offset="300" data-aos-easing="ease-in" data-aos-duration="500">
             <h4>Experience Work</h4>
 
             <div class="card card-04">
