--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1>ABUYAKO</h1>
         </div>
         <div class="navbar-list" id="myTopnav">
-            <ul>
+            <ul class="main-nav" id="js-menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -27,7 +27,6 @@
                 <li><a href="#project">Project</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <a href="" class="icons" onclick="myFunction()"><i class="fa fa-bars"></i></a>
             </ul>
         </div>
     </div>
@@ -344,7 +343,7 @@
     <script src="/assets/js/app.js"></script>
     <script src="/assets/js/gallery.js"></script>
     <script src="/assets/js/top.js"></script>
-    
+    <script src="/nav.js"></script>
 </body>
 
 </html
