--- a/index.html
+++ b/index.html
@@ -14,12 +14,28 @@
 <body>
 
     <!-- NavBar -->
+    <nav class="navba">
+        <span class="navbar-toggle" id="js-navbar-toggle">
+          <i class="fa fa-bars"></i>
+        </span>
+        <a href="#" class="logo">ABUYAKO</a>
+        <ul class="main-nav" id="js-menu">
+            <li><a href="#home" class="nav-links">Home</a></li>
+            <li><a href="#about" class="nav-links">About</a></li>
+            <li><a href="#skills" class="nav-links">Skills</a></li>
+            <li><a href="#experience" class="nav-links">Experience</a></li>
+            <li><a href="#project" class="nav-links">Project</a></li>
+            <li><a href="#gallery" class="nav-links">Gallery</a></li>
+            <li><a href="#contact" class="nav-links">Contact</a></li>
+        </ul>
+      </nav>
+  
     <div class="navbar">
         <div class="navbar-logo">
             <h1>ABUYAKO</h1>
         </div>
         <div class="navbar-list" id="myTopnav">
-            <ul class="main-nav" id="js-menu">
+            <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
