adding profile picture

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
         </div>
         <div class="home-image" data-aos="zoom-in">
-            <img src="/assets/images/pic.jpg" alt="jeshi" w100%;>
+            <img src="/assets/images/pics.jpg" alt="jeshi" w100%;>
         </div>
     </div>
 
