--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="abuyako-portfolio" content="">
     <title>Abuyako - Portfolio</title>
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="icon" type="image/ico" href="assets/images/logos.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
