add dark mode button

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                 <li><a href="#project">Project</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <button onClick="toggleTheme('light')">Light mode</button>
+                <button onClick="toggleTheme('dark')">Dark Mode</button>
             </ul>
         </div>
     </div>
