updating for cv to resume

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </ul>
 
             <div class="about-download">
-                <a href="/assets/file/cv.pdf" download>
+                <a href="/assets/file/Resume.pdf" download>
                     <button class="btn">Download CV <i class="fa fa-download"></i></button>
                 </a>
             </div>
