updating the about section

--- a/index.html
+++ b/index.html
@@ -96,8 +96,13 @@
         </div>
         <div class="about-text" data-aos="zoom-in">
             <h1>About Me</h1>
-            <p>Hello, I'm Abuyako, Web Developer based on Dar es salaam. I have rich experience in web site design &
-                building and customization. Also I am good at</p>
+            <!-- <p>Hello, I'm Abuyako, Web Developer based on Dar es salaam. I have rich experience in web site design &
+                building and customization. Also I am good at</p> -->
+                <p>
+                    I'm a Front End Developer with 1 year of experience. I specialized in JavaScript and Angular Framework.
+                     Also I'm Interested in UI/UX designing. I'm a Self taught and clean code advocate,
+                      I can work alone or in a team.
+                </p>
 
             <ul>
                 <li>html</li>
