updating the header

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             <ul>
                 <li></span><i class="fa fa-envelope"></i></span> abuyako@gmail.com</li>
                 <li><span><i class="fa fa-phone"></i></span></i> +255 752 080 410</li>
-                <li><span><i class="fa fa-map-marker"></i></span> Dar es salaam, Tanzania</li>
+                <li><span><i class="fa fa-wifi"></i></span> Work Remotely</li>
+                <li><span><i class="fa fa-map-marker"></i></span> Tanzania</li>
             </ul>
             <div class="home-social">
                 <a href="https://web.facebook.com/abubakary.kowero"><i class="fa fa-facebook material-icons"></i></a>
