updating the project links

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 <h2>DESIGN & DEVELOPMENT</h2>
                 <p>This is my portfolio for all my details, skills, work experience and many more. </p>
                 <div class="project02-link link">
-                    <a href="https://abuyako.netlify.com/">View Details</a>
+                    <a href="https://abuyako.tech/">View Details</a>
                 </div>
             </div>
         </div>
